After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 643096 - region panel: too slow to load
region panel: too slow to load
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Other Preferences
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-02-23 17:03 UTC by Matthias Clasen
Modified: 2011-02-24 03:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make language loading async (4.23 KB, patch)
2011-02-24 02:26 UTC, Matthias Clasen
none Details | Review
add async loading function (3.58 KB, patch)
2011-02-24 02:55 UTC, Matthias Clasen
committed Details | Review
load languages async in the region panel (1.71 KB, patch)
2011-02-24 03:03 UTC, Matthias Clasen
committed Details | Review
load languages async in the user accounts panel (1.68 KB, patch)
2011-02-24 03:08 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2011-02-23 17:03:26 UTC
We really need to populate the language list async, after showing the panel
Comment 1 Matthias Clasen 2011-02-24 02:26:12 UTC
Created attachment 181788 [details] [review]
Make language loading async
Comment 2 Matthias Clasen 2011-02-24 02:55:15 UTC
Created attachment 181790 [details] [review]
add async loading function

The first part of the above patch, adding a way to cancel the idle if no longer needed.
Comment 3 Bastien Nocera 2011-02-24 02:59:15 UTC
Review of attachment 181790 [details] [review]:

As discussed on IRC.
Comment 4 Matthias Clasen 2011-02-24 03:03:36 UTC
Created attachment 181791 [details] [review]
load languages async in the region panel
Comment 5 Bastien Nocera 2011-02-24 03:07:48 UTC
Review of attachment 181791 [details] [review]:

Looks good
Comment 6 Matthias Clasen 2011-02-24 03:08:04 UTC
Created attachment 181792 [details] [review]
load languages async in the user accounts panel