Add an async variant of language loading

This just code loads one language at a time in an idle,
to avoid blocking the UI for a long time. The function returns
the id of the sources, so you can just call g_source_remove()
if you don't need the languages anymore (e.g if the user goes
to another panel before the list is fully populated).

https://bugzilla.gnome.org/show_bug.cgi?id=643096